# fbpic_to_vtk

./: .gitignore  README.md  example.ipynb  pyproject.toml
src/fbpic_to_vtk/: __init__.py  exporter.py  importer.py  main.py  modesum.py
tests/: test_main.py
